--- a/src/styles/atoms/_pa_head-label.scss
+++ b/src/styles/atoms/_pa_head-label.scss
@@ -42,12 +42,14 @@
     color: $link-color;
     border-bottom: 0;
 
-    &:hover {
-      color: $link-color-hover;
+    html:not(.mobile) & {
+      &:hover {
+        color: $link-color-hover;
+      }
     }
 
     &:active {
-      color: $link-color-active;
+      color: $link-color-active !important;
     }
   }
 
