--- a/src/styles/organisms/_po_head-nav.scss
+++ b/src/styles/organisms/_po_head-nav.scss
@@ -79,6 +79,20 @@
         color: $link-color;
         content: '✕';
       }
+
+      html:not(.mobile) & {
+        &:hover {
+          &::after {
+            color: $link-color-hover;
+          }
+        }
+      }
+
+      &:active {
+        &::after {
+          color: $link-color-active !important;
+        }
+      }
     }
   }
 
@@ -105,15 +119,17 @@
           font-size: get-progressive-calc($mobile-toggle-min-size, $mobile-toggle-max-size);
         }
 
-        &:hover {
-          &::after {
-            color: $link-color-hover;
+        html:not(.mobile) & {
+          &:hover {
+            &::after {
+              color: $link-color-hover;
+            }
           }
         }
 
         &:active {
           &::after {
-            color: $link-color-active;
+            color: $link-color-active !important;
           }
         }
       }
@@ -130,15 +146,17 @@
           fill: $mobile-toggle-color;
         }
 
-        &:hover {
-          > svg {
-            fill: $mobile-toggle-color-hover;
+        html:not(.mobile) & {
+          &:hover {
+            > svg {
+              fill: $mobile-toggle-color-hover;
+            }
           }
         }
 
         &:active {
           > svg {
-            fill: $mobile-toggle-color-active;
+            fill: $mobile-toggle-color-active !important;
           }
         }
       }
@@ -220,12 +238,14 @@
       padding: 0 calc(#{$space-between-items} / 2);
       color: $link-color;
 
-      &:hover {
-        color: $link-color-hover;
+      html:not(.mobile) & {
+        &:hover {
+          color: $link-color-hover;
+        }
       }
 
       &:active {
-        color: $link-color-active;
+        color: $link-color-active !important;
       }
     }
   }
@@ -379,12 +399,14 @@
           fill: $link-color;
         }
 
-        &:hover svg {
-          fill: $link-color-hover;
+        html:not(.mobile) & {
+          &:hover svg {
+            fill: $link-color-hover;
+          }
         }
 
         &:active svg {
-          fill: $link-color-active;
+          fill: $link-color-active !important;
         }
 
         body.search & {
@@ -416,12 +438,14 @@
             line-height: .8;
           }
 
-          &:hover::after {
-            color: $link-color-hover;
+          html:not(.mobile) & {
+            &:hover::after {
+              color: $link-color-hover;
+            }
           }
 
           &:active::after {
-            color: $link-color-active;
+            color: $link-color-active !important;
           }
         }
       }
